itemsearch_app/ItemSearchGeneric - v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: itemsearch-svc
  labels:
    app: itemreservation-msa
spec:
  type: NodePort
  ports:
  - port: 8091
    targetPort: 8091
    # nodePort: 31091
    name: http
  selector:
    app: itemreservation-msa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itemsearch-svc
spec:
  selector:
    matchLabels:
      app: itemreservation-msa
  replicas: 1
  template:
    metadata:
      labels:
        app: itemreservation-msa
        version: v1
    spec:
      containers:
      - name: itemsearch
        image: docker.io/debanjande/ora-itemsearch-v1
        ports:
        - containerPort: 8091
