itemsearch_app/ItemSearchVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: itemsearch
spec:
  hosts:
  - itemsearch
  http:
  - route:
    - destination:
        host: itemsearch
        subset: v1
